@@ -1,5 +1,13 @@
 2023-02-04  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.c: Add note to pkl_ast_sizeof_type comment.
+	* libpoke/pkl.h: Prototype for pkl_constant_fold.
+	* libpoke/pkl.c (pkl_constant_fold): New function.
+	* testsuite/poke.pkl/arrays-index-17.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
+2023-02-04  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen.c (pkl_gen_pr_asm_stmt): Emit error whenever
 	necessary.
 	(pkl_gen_pr_asm_exp): Likewise.
